overflow scrollbar fixed and tweak the css a bit

--- a/frontend/src/screens/itinerary/components/itinerary.css
+++ b/frontend/src/screens/itinerary/components/itinerary.css
@@ -1,7 +1,7 @@
-.itinerary-main {
+/* .itinerary-main {
   background-image: url("https://raw.githubusercontent.com/sjs5953/keep-calm-and-travel-on/master/frontend/src/assets/img/temple-trees.jpg");
   background-size: cover;
-}
+} */
 
 .grid-activities {
   display: grid;
@@ -25,7 +25,7 @@
 .grid-headlines {
   display: grid; 
   grid-template-columns: repeat(4, 1fr);
-  border-top: 1px solid black;
+  border-top: transparent;
   border-right: transparent;
   overflow-y: hidden;
   overflow-x: auto;
@@ -34,6 +34,7 @@
 .grid-headlines > span {
   display: flex;
   width: auto;
+  font-size: 16px;
   padding: 8px 4px;
   border-left: transparent;
   border-bottom: transparent;
@@ -44,4 +45,11 @@
 .destination {
   display: flex;
   justify-content: center;
+  border-bottom: 3px solid black; 
+  padding: 0 0 3px 0;
+}
+
+.activities-container {
+  height: 340px;
+  overflow: auto;
 }
